# genome-explorer

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  LOG.md  README.md  TODO.md  pyproject.toml
genome_explorer/: app.py
genome_explorer/ai/pages/: ai_assistant.py
genome_explorer/core/: __init__.py  config.py  session.py  types.py
genome_explorer/education/pages/: learning_hub.py
genome_explorer/reports/pages/: genome_reports.py
genome_explorer/simulation/pages/: simulation_lab.py
genome_explorer/visualization/pages/: genome_viewer.py
