[tool.poetry]
name = "genome-explorer"
version = "0.1.0"
description = "An interactive AI-powered platform for genomics education"
authors = ["William Blair"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
plotly = "^5.24.1"
matplotlib = "^3.10.0"
transformers = "^4.47.1"
biopython = "^1.84"
pandas = "^2.2.3"
numpy = "^2.2.1"
scikit-learn = "^1.6.0"
torch = "^2.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
mypy = "^1.14.0"
isort = "^5.13.2"
coverage = "^7.6.10"
hypothesis = "^6.123.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
