[tool.poetry]
name = "genome-explorer"
version = "0.1.0"
description = "An interactive AI-powered platform for genomics education"
authors = ["William Blair"]
readme = "README.md"
packages = [{include = "genome_explorer"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28"
plotly = "^5.18"
matplotlib = "^3.8"
transformers = "^4.35"
biopython = "^1.81"
pandas = "^2.1"
numpy = "^1.24"
scikit-learn = "^1.3"
torch = "^2.1"
openai = "^1.3"
sentence-transformers = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.1"
mypy = "^1.7"
isort = "^5.13"
coverage = "^7.3"
hypothesis = "^6.92"
pre-commit = "^3.5"
ruff = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=genome_explorer"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
